test/tests/stages/8_loops/valid/extra_credit/switch_default_fallthrough.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 5
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
                CCompound: 
                  CB: 
                    List[2]: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CExpression: 
                            CAssignment: 
                              None: 
                              CVar: 
                                TIdentifier: a
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 0
                                None: 
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CReturn: 
                            CVar: 
                              TIdentifier: a
                              None: 
                List[0]: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
